# bookstore_api

./: .env.example  .gitignore  README.md  alembic.ini  books_faulty.csv  books_valid.csv  database.py  generate_dummy_data.py  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 25abebca724f_adds_is_verified_column_to_users.py  2a351ef8f622_change_author_column_from_array_to_.py  45ef56af5c40_adds_verification_tokens_table.py  49491736007d_initial_migrations.py  791d70d24c3e_refactoring_user_role_and_adding_cover_.py  a89056ff4578_initial_migrations.py  b88169abd2e5_changed_token_hash_column_name_to_token_.py  c42fd579ecf6_changes_string_literal_in_user_s_role_.py  cb420ccfb3c0_adds_verification_tokens_table.py
config/: __init__.py  session.py
models/: __init__.py  book.py  user.py  verification_tokens.py
routes/: auth.py  book.py  user.py
schemas/: book.py  user.py
utils/: hashing.py  imagekit.py  smtp_config.py  token.py  user.py
